I created an Error page

--- a/AllUp/AllUp/Views/Shared/_Layout.cshtml
+++ b/AllUp/AllUp/Views/Shared/_Layout.cshtml
@@ -33,8 +33,7 @@
 
     <!--====== Main Style CSS ======-->
     <link rel="stylesheet" href="~/assets/css/style.css">
-
-
+    @RenderSection("Css",false)
     <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
     <!-- <link rel="stylesheet" href="~/assets/css/vendor/plugins.min.css">
     <link rel="stylesheet" href="~/assets/css/style.min.css"> -->
