--- a/AllUp/AllUp/Views/Shared/_Layout.cshtml
+++ b/AllUp/AllUp/Views/Shared/_Layout.cshtml
@@ -991,6 +991,30 @@
 
     <!--====== Header Part Ends ======-->
             @RenderBody()
+    <!--====== Newsletter Part Start ======-->
+
+    <section class="newsletter-area pt-100 pb-100 bg_cover" style="background-image: url(../assets/images/bg-newletter.jpg)">
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-lg-8">
+                    <div class="newsletter-content">
+                        <h2 class="newsletter-title">Subscribe our newsletter</h2>
+                        <p>allup is a powerful eCommerce HTML Template</p>
+
+                        <div class="newsletter-forn">
+                            <form>
+                                <input type="text" placeholder="Your Email address">
+                                <a id="subBtn" class="main-btn text-white">Subscribe</a>
+                            </form>
+                            <div class="text-danger" id="errMes"></div>
+                        </div>
+                    </div> <!-- newsletter content -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <!--====== Newsletter Part Ends ======-->
 <!--====== Footer Part Start ======-->
 
 <section class="footer-area bg_cover" style="background-image: url(../assets/images/bg-footer.jpg)">
@@ -1236,6 +1260,23 @@
 <!--====== Main Activation js ======-->
 <script src="~/assets/js/main.js"></script>
 
+<script>
+
+        $(document).on("click", "#subBtn", function () {
+           $("#errMes").empty()
+            $.ajax({
+                url: "/Home/Subscribe/",
+                type:"get",
+                data:{
+                
+                    "email":$("#subBtn").prev().val()
+                },
+                success: function (res) {
+                    $("#errMes").append(res)
+                }
+            });
+        });
+</script>
 
 
 
